--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -311,3 +311,16 @@ body {
   align-items: center;
   flex-direction: column;
 }
+
+@media only screen and (max-width: 768px) {
+  .choice {
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+}
